--- a/frontend/src/pages/LikesPage/components/MatchCard/matchCard.module.css
+++ b/frontend/src/pages/LikesPage/components/MatchCard/matchCard.module.css
@@ -59,7 +59,9 @@
 }
 
 .socialButton {
-  margin-right: 10px;
+  margin-right: 30px;
+  /* box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2); */
+  /* z-index: 2; */
 }
 
 .socialButton:hover {
@@ -70,4 +72,31 @@
 .socialIcon {
   width: 20px;
   height: 20px;
+  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 1);
 }
+
+.dislikeButton {
+  width: 3rem;
+  height: 3em;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.2); */
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-left: 5px;
+  margin-top: -5px;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
+/* .telegram {
+  box-shadow: 0 4px 10px 2px rgba(61, 14, 170, 0.2);
+  border-radius: 50%;
+  width: 37px;
+  height: 37px;
+  background-color: blue;
+} */
