--- a/frontend/src/features/filters/components/FiltersDrawer/filtersDrawer.module.css
+++ b/frontend/src/features/filters/components/FiltersDrawer/filtersDrawer.module.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  overflow-y: auto;
 }
 
 .modalContainer {
@@ -19,20 +20,22 @@
   border-bottom-right-radius: 20px;
   background-color: var(--background-color);
   box-shadow: 0px 4px 10px var(--shadow-color);
-  overflow: hidden;
+  min-height: 100vh;
+  overflow-y: auto;
 }
 
 .content {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   max-width: 500px;
   margin: 0 auto;
   background-color: var(--section-background);
   color: var(--text-color);
   position: relative;
   z-index: 1001;
+  padding-bottom: 120px;
 }
 
 .header {
@@ -129,17 +132,13 @@
   transition: all 0.3s;
 }
 
-.chip:hover {
-  background-color: var(--border-color);
-}
-
 .chipSelected {
   background-color: var(--primary-color);
   color: var(--header-text-color);
 }
 
 .chipSelected:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
 
 .toggleContainer {
@@ -204,9 +203,16 @@ input:checked + .slider:before {
 }
 
 .buttonContainer {
-  margin-top: 20px;
+  position: fixed;
   display: flex;
   justify-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: var(--section-background);
+  padding: 20px;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1002;
 }
 
 @media (max-width: 480px) {
@@ -222,4 +228,17 @@ input:checked + .slider:before {
     padding: 6px 12px;
     font-size: 13px;
   }
+}
+
+.customSlider {
+  margin-top: -17px;
+}
+
+.button {
+  width: 120px;
+  background-color: var(--tag-background);
+  color: black;
+  font-weight: 500;
+  margin-right: 250px;
+  margin-top: 10px;
 }
