--- a/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
+++ b/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
@@ -473,3 +473,92 @@
   margin-left: -200px;
   margin-top: -20px;
 }
+
+
+.loader {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  color: #fff;
+  left: 25px;
+  box-sizing: border-box;
+  animation: shadowRolling 2s linear infinite;
+  position: absolute;
+  margin-top: 600px;
+}
+
+@keyframes shadowRolling {
+  0% {
+    box-shadow:
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0);
+  }
+
+  12% {
+    box-shadow:
+      100px 0 white,
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0);
+  }
+
+  25% {
+    box-shadow:
+      110px 0 white,
+      100px 0 white,
+      0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0);
+  }
+
+  36% {
+    box-shadow:
+      120px 0 white,
+      110px 0 white,
+      100px 0 white,
+      0px 0 rgba(255, 255, 255, 0);
+  }
+
+  50% {
+    box-shadow:
+      130px 0 white,
+      120px 0 white,
+      110px 0 white,
+      100px 0 white;
+  }
+
+  62% {
+    box-shadow:
+      200px 0 rgba(255, 255, 255, 0),
+      130px 0 white,
+      120px 0 white,
+      110px 0 white;
+  }
+
+  75% {
+    box-shadow:
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0),
+      130px 0 white,
+      120px 0 white;
+  }
+
+  87% {
+    box-shadow:
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0),
+      130px 0 white;
+  }
+
+  100% {
+    box-shadow:
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0);
+  }
+}
