--- a/frontend/src/widgets/EditProfile/components/InterestsSection/interestsSection.module.css
+++ b/frontend/src/widgets/EditProfile/components/InterestsSection/interestsSection.module.css
@@ -11,8 +11,11 @@
 
 .section h3 {
   margin-top: 0;
-  margin-bottom: 15px;
   font-size: 18px;
   font-weight: 500;
   color: var(--text-color);
+}
+
+.inner {
+  padding: 10px;
 }
