--- a/frontend/src/shared/components/PhoneInput/phoneInput.module.css
+++ b/frontend/src/shared/components/PhoneInput/phoneInput.module.css
@@ -21,7 +21,9 @@
   font-size: 16px;
   color: var(--text-color);
   outline: none;
-  transition: background-color 0.3s;
+  transition:
+    background-color 0.3s,
+    border 0.3s;
   height: 50px;
   width: 320px;
 }
@@ -32,6 +34,15 @@
 
 .input:focus {
   background-color: #e0e4eb;
+}
+
+.valid {
+  border: 2px solid #4caf50;
+}
+
+.invalid {
+  border: 2px solid #f44336;
+  background-color: rgba(244, 67, 54, 0.05);
 }
 
 .inputWrapper {
