--- a/frontend/src/pages/LikesPage/components/MatchModal/matchModal.module.css
+++ b/frontend/src/pages/LikesPage/components/MatchModal/matchModal.module.css
@@ -124,7 +124,7 @@ div.dropContainer:after {
   height: 100px;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
   /* animation: appear 1.3s 1.5s forwards; */
 }
 
