--- a/frontend/src/features/filters/components/FiltersDrawer/components/InterestFilter/interestFilter.module.css
+++ b/frontend/src/features/filters/components/FiltersDrawer/components/InterestFilter/interestFilter.module.css
@@ -1,9 +1,9 @@
 .button {
   width: 120px;
   background-color: var(--tag-background);
-  color: black;
+  color: var(--tag-color) !important;
   font-weight: 500;
-  margin-right: 250px;
+  margin-right: 215px;
 }
 
 .sectionTitle {
