--- a/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
+++ b/frontend/src/pages/ProfilePage/components/Profile/profile.module.css
@@ -24,6 +24,7 @@
 }
 
 .premiumButton {
+  /* background-color: var(--button-backround); */
   background-color: white;
   width: 100%;
   height: 40px;
