--- a/frontend/src/shared/components/NavBar/navBar.css
+++ b/frontend/src/shared/components/NavBar/navBar.css
@@ -7,6 +7,7 @@
   box-shadow: 0px -2px 4px var(--shadow-color);
   z-index: 1010;
   width: 100%;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .navBarContainer.force-repaint {
@@ -17,10 +18,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 4rem;
+  height: 2.5rem;
   padding: 0 1rem;
   max-width: 768px;
   margin: 0 auto;
+  /* padding-bottom: 5px; */
 }
 
 .navItem {
@@ -44,4 +46,9 @@
 .navItem.active,
 .navItem.active svg {
   transition: none !important;
+}
+
+.whiteCont {
+  height: 10px;
+  background-color: blue;
 }
