--- a/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
+++ b/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   background-color: var(--background-color);
   color: var(--text-color);
   padding-bottom: 70px;
