--- a/frontend/src/widgets/PaymentModal/paymentModal.module.css
+++ b/frontend/src/widgets/PaymentModal/paymentModal.module.css
@@ -98,7 +98,9 @@
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
+  transition:
+    transform 0.2s,
+    box-shadow 0.2s;
   margin-top: 10px;
 }
 
@@ -123,6 +125,6 @@
   margin: 0;
 }
 
-.smallInput{
+.smallInput {
   width: 120px;
 }
