--- a/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
+++ b/frontend/src/pages/ProfilePage/components/Page/profilePage.module.css
@@ -1,12 +1,17 @@
 .pageContainer {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 100vh;
-  overflow-y: auto;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
   background-color: var(--background-color);
   color: var(--text-color);
   padding-bottom: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .backButton {
