--- a/frontend/src/pages/AuthPage/components/Page/authPage.module.css
+++ b/frontend/src/pages/AuthPage/components/Page/authPage.module.css
@@ -103,14 +103,16 @@
 }
 
 .terms {
-  position: absolute;
-  bottom: 90px;
+  position: fixed;
+  bottom: 50px;
   left: 0;
   right: 0;
   text-align: center;
   padding: 0 20px;
   color: var(--header-text-color);
   font-size: 14px;
+  margin-top: auto;
+  z-index: 1;
 }
 
 .link {
